# GallerySorter

./: .gitignore  Cargo.toml  README.md  README_zh.md  Template.toml  windows.manifest
.github/workflows/: release.yml
Config/: Template.toml
locales/: en.toml  zh-CN.toml
src/: cli.rs  config.rs  error.rs  hash.rs  i18n.rs  interactive.rs  lib.rs  main.rs  process.rs  state.rs
src/os/: mod.rs  windows.rs
src/time/: exif.rs  filename.rs  mod.rs  video.rs
src/tui/: app.rs  components.rs  display.rs  event.rs  labels.rs  mod.rs  state.rs  theme.rs  ui.rs
src/tui/screens/: config_wizard.rs  exit.rs  main_menu.rs  mod.rs  progress.rs  summary.rs
src/tui/state/: app.rs  input.rs  menu.rs  mod.rs  progress.rs  selection.rs  summary.rs  wizard.rs
