[package]
name = "gallery-sorter"
version = "1.3.0"
edition = "2024"
authors = ["PianCat"]
description = "A  CLI tool for photo album organization with intelligent time-based classification"
license = "GPL-3.0"
repository = "https://github.com/PianCat/GallerySorter"
keywords = ["photo", "gallery", "organizer", "exif", "media"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Parallel processing
rayon = "1.11"

# EXIF metadata parsing
kamadak-exif = "0.6.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Fast hashing for deduplication
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Serialization for state persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Internationalization
rust-i18n = "3.1"
sys-locale = "0.3"

# Directory traversal
walkdir = "2.5"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regular expressions for filename parsing
regex = "1.12"

# File system utilities
filetime = "0.2"

# Terminal UI
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
tempfile = "3.24"
